[project]
name = "dqx-data-quality-manager"
version = "1.0.0"
description = "AI-powered data quality rule generation and validation for Databricks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Diggibyte Technologies" }
]
keywords = ["databricks", "data-quality", "dqx", "ai", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "Flask>=3.0.0,<3.1",
    "Werkzeug>=3.0.0,<3.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.0",
    "databricks-sdk>=0.76.0",
    "databricks-sql-connector>=4.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "flake8>=7.0.0",
    "responses>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/dediggibyte/databricks_dqx_agent"
Documentation = "https://dediggibyte.github.io/databricks_dqx_agent/"
Repository = "https://github.com/dediggibyte/databricks_dqx_agent"
Issues = "https://github.com/dediggibyte/databricks_dqx_agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires Databricks connection)",
]

[tool.coverage.run]
source = ["src/app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 80

[tool.flake8]
max-line-length = 120
max-complexity = 15
select = ["E9", "F63", "F7", "F82"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
